--- a/src/Dashboard/MedDashboardEntry/MedDashboardEntry.css
+++ b/src/Dashboard/MedDashboardEntry/MedDashboardEntry.css
@@ -1,12 +1,9 @@
 @import "tailwindcss";
 
 @layer components {
-  .div {
-    @apply w-full h-full flex flex-col;
-  }
 
   .items {
-    @apply w-full flex flex-col sm:flex-row items-start sm:items-center justify-between gap-2 text-sm sm:text-base md:text-lg;
+    @apply w-full flex flex-col sm:flex-row items-start justify-between text-sm sm:text-base md:text-lg;
   }
 
   .medicineName {
@@ -17,9 +14,6 @@
     @apply flex items-center min-h-fit shrink-0 basis-full sm:basis-1/4 sm:flex-grow;
   }
 
-  .medicineStatus {
-    @apply flex items-center min-h-fit shrink-0 basis-full sm:basis-1/3 sm:flex-grow;
-  }
 
   .line {
     @apply w-full h-1 border border-[#FF7E7E] fill-[#FF7E7E];
